added get all user cards, delete card, get notpayed trips for user
